--- a/wheel.html
+++ b/wheel.html
@@ -140,7 +140,7 @@
       { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' },        // светло-красный
       { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },        // золотой (оставлен)
       { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },        // очень светло-красный
-      { type: 'premium', value: 7, text: 'премиум на 7 дней', color: '#6A1B9A' },// пурпурный
+      { type: 'premium', value: 7, text: 'Премиум аккаунт (7 дней)', color: '#6A1B9A' },// пурпурный
       { type: 'exp_gain', value: 24, text: '24 опыта', color: '#43A047' },       // яркий зелёный
       { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' }, // синий
       { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },      // насыщенный красный
