--- a/wheel.html
+++ b/wheel.html
@@ -135,23 +135,23 @@
     const wheelContainer = document.getElementById('wheel-container');
 
     const rewards = [
-      { type: 'exp_gain', value: 12, text: '+12 опыта', color: '#388E3C' },
       { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#C62828' }, 
+      { type: 'exp_gain', value: 12, text: '+12 опыта', color: '#388E3C' },
       { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' }, 
       { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' }, 
       { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' }, 
       { type: 'premium', value: 7, text: 'Премиум аккаунт (7 дней)', color: '#6A1B9A' },
-      { type: 'exp_gain', value: 24, text: '+24 опыта', color: '#43A047' },
+      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
       { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' },
       { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },  
       { type: 'exp_gain', value: 6, text: '+6 опыта', color: '#81C784' },  
-      { type: 'exp_loss', value: 9, text: '-9 опыта', color: '#D32F2F' },  
+      { type: 'none', value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },  
       { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#F44336' },  
       { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },   
       { type: 'exp_loss', value: 18, text: '-18 опыта', color: '#AD1457' },    
       { type: 'exp_gain', value: 30, text: '+30 опыта', color: '#2E7D32' },
       { type: 'exp_loss', value: 21, text: '-21 опыта', color: '#E53935' },
-      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
+      { type: 'exp_gain', value: 24, text: '+24 опыта', color: '#43A047' },
     ];
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
