--- a/wheel.html
+++ b/wheel.html
@@ -3,15 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#222" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>Колесо фортуны</title>
   <style>
+    /* стили из твоего примера */
     body {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      width: 100vw;
       margin: 0;
+      padding: 0;
       background: linear-gradient(135deg, #222, #333);
       font-family: Arial, sans-serif;
       overflow: hidden;
@@ -19,7 +26,8 @@
     #wheel-container {
       width: 80vw;
       max-width: 500px;
-      aspect-ratio: 1/1;
+      max-height: 80vh;
+      aspect-ratio: 1 / 1;
       position: relative;
       margin-bottom: 20px;
     }
@@ -52,7 +60,7 @@
       height: 100%;
       border: 4px solid #fff;
       border-radius: 50%;
-      box-shadow: 0 0 20px rgba(255,255,255,0.3);
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
       background: #fff;
     }
     #spinButton {
@@ -68,7 +76,7 @@
     }
     #spinButton:hover:not(:disabled) {
       transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(76,175,80,0.5);
+      box-shadow: 0 0 15px rgba(76, 175, 80, 0.5);
     }
     #spinButton:disabled {
       background: #666;
@@ -85,7 +93,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0,0,0,0.85);
+      background: rgba(0, 0, 0, 0.85);
       color: #fff;
       padding: 20px 30px;
       border-radius: 12px;
@@ -106,40 +114,60 @@
     <canvas id="wheel"></canvas>
   </div>
   <div id="rewardPopup"></div>
-  <button id="spinButton">Вращать!</button>
+  <button id="spinButton" disabled>Вращать!</button>
   <script>
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
 
-    const canvas = document.getElementById('wheel');
-    const ctx = canvas.getContext('2d');
-    const spinButton = document.getElementById('spinButton');
-    const pointer = document.getElementById('pointer');
-    const wheelContainer = document.getElementById('wheel-container');
+    const canvas = document.getElementById("wheel");
+    const ctx = canvas.getContext("2d");
+    const spinButton = document.getElementById("spinButton");
+    const pointer = document.getElementById("pointer");
+    const wheelContainer = document.getElementById("wheel-container");
+    const rewardPopup = document.getElementById("rewardPopup");
 
     const rewards = [
-      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#C62828' }, 
-      { type: 'exp_gain', value: 12, text: '+12 опыта', color: '#388E3C' },
-      { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' }, 
-      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' }, 
-      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' }, 
-      { type: 'premium', value: 7, text: 'Премиум аккаунт (7 дней)', color: '#6A1B9A' },
-      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
-      { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' },
-      { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },  
-      { type: 'exp_gain', value: 6, text: '+6 опыта', color: '#81C784' },  
-      { type: 'none', value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },  
-      { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#F44336' },  
-      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },   
-      { type: 'exp_loss', value: 18, text: '-18 опыта', color: '#AD1457' },    
-      { type: 'exp_gain', value: 30, text: '+30 опыта', color: '#2E7D32' },
-      { type: 'exp_loss', value: 21, text: '-21 опыта', color: '#E53935' },
-      { type: 'exp_gain', value: 24, text: '+24 опыта', color: '#43A047' },
+      { type: "exp_loss", value: 12, text: "-12 опыта", color: "#C62828" },
+      { type: "exp_gain", value: 12, text: "+12 опыта", color: "#388E3C" },
+      { type: "exp_loss", value: 6, text: "-6 опыта", color: "#E57373" },
+      { type: "item", value: "legendary", text: "🎁", color: "#FFD700" },
+      { type: "exp_loss", value: 3, text: "-3 опыта", color: "#EF9A9A" },
+      { type: "premium", value: 7, text: "Премиум аккаунт (7 дней)", color: "#6A1B9A" },
+      { type: "exp_loss", value: 3, text: "-3 опыта", color: "#EF9A9A" },
+      { type: "raid", value: "clear", text: "Сброс таймера /raid", color: "#1565C0" },
+      { type: "exp_loss", value: 24, text: "-24 опыта", color: "#B71C1C" },
+      { type: "exp_gain", value: 6, text: "+6 опыта", color: "#81C784" },
+      { type: "none", value: "none", text: "Повезёт в следующий раз", color: "#D32F2F" },
+      { type: "exp_loss", value: 15, text: "-15 опыта", color: "#F44336" },
+      { type: "item", value: "epic", text: "🎁", color: "#8E24AA" },
+      { type: "exp_loss", value: 18, text: "-18 опыта", color: "#AD1457" },
+      { type: "exp_gain", value: 30, text: "+30 опыта", color: "#2E7D32" },
+      { type: "exp_loss", value: 21, text: "-21 опыта", color: "#E53935" },
+      { type: "exp_gain", value: 24, text: "+24 опыта", color: "#43A047" },
     ];
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
     let currentAngle = 0;
     let spinning = false;
+    let spinVelocity = 0;
+
+    // Получаем параметры из URL
+    function getQueryParams() {
+      const params = {};
+      location.search.substr(1).split("&").forEach(function (item) {
+        const [key, value] = item.split("=");
+        if (key) params[key] = decodeURIComponent(value);
+      });
+      return params;
+    }
+
+    const params = getQueryParams();
+    const selectedIndex = parseInt(params.index) || 0;
+    const selectedReward = {
+      type: params.type || "none",
+      value: params.value || null,
+      text: params.text || "Повезёт в следующий раз",
+    };
 
     function drawWheel() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -152,15 +180,17 @@
         const startAngle = currentAngle + anglePerSegment * index;
         const endAngle = startAngle + anglePerSegment;
 
+        // Сектор
         ctx.beginPath();
         ctx.moveTo(centerX, centerY);
         ctx.arc(centerX, centerY, extendedRadius, startAngle, endAngle);
         ctx.fillStyle = reward.color;
         ctx.fill();
         ctx.lineWidth = 2;
-        ctx.strokeStyle = '#fff';
+        ctx.strokeStyle = "#fff";
         ctx.stroke();
 
+        // Подготовка текста
         const midAngle = startAngle + anglePerSegment / 2;
         const isEmoji = /^[^\w\s]+$/.test(reward.text);
         const fontSize = isEmoji
@@ -168,9 +198,9 @@
           : Math.max(10, canvas.width / 40);
 
         ctx.font = `bold ${fontSize}px "Segoe UI Emoji", Arial`;
-        ctx.fillStyle = '#fff';
-        ctx.textAlign = 'center';
-        ctx.textBaseline = 'middle';
+        ctx.fillStyle = "#fff";
+        ctx.textAlign = "center";
+        ctx.textBaseline = "middle";
 
         ctx.save();
         if (isEmoji) {
@@ -186,71 +216,54 @@
       });
     }
 
-    // Запрос на сервер на выбор награды
-    spinButton.addEventListener("click", () => {
-      if (spinning) return;
-      spinning = true;
+    // Анимация плавного вращения к нужному сектору
+    function animateSpinToIndex(targetIndex, reward) {
       spinButton.disabled = true;
+      spinning = true;
 
-      Telegram.WebApp.sendData(JSON.stringify({ action: "spin_request" }));
-    });
-
-    // Получаем ответ от бота с выбранной наградой и запускаем анимацию
-    window.addEventListener("message", (event) => {
-      try {
-        const data = JSON.parse(event.data);
-        if (data.type === "spin_result") {
-          animateSpinToIndex(data.index, data.reward);
-        }
-      } catch (e) {
-        console.error("Ошибка парсинга сообщения:", e);
-      }
-    });
-
-    function animateSpinToIndex(index, reward) {
-      const totalSegments = rewards.length;
-      const stopAngle =
-        2 * Math.PI * 5 + // 5 полных оборотов для плавности
-        index * anglePerSegment +
+      const spins = 4; // количество полных оборотов
+      const targetAngle =
+        2 * Math.PI * spins -
+        (targetIndex * anglePerSegment) +
         anglePerSegment / 2;
 
-      const duration = 4000;
-      const start = performance.now();
+      const duration = 5000; // время вращения в мс
+      const startTime = performance.now();
 
-      function animate(time) {
-        const elapsed = time - start;
-        if (elapsed < duration) {
-          const progress = elapsed / duration;
-          // easeOut cubic
-          const ease = 1 - Math.pow(1 - progress, 3);
-          currentAngle = ease * stopAngle;
-          drawWheel();
-          requestAnimationFrame(animate);
-        } else {
-          currentAngle = stopAngle % (2 * Math.PI);
-          drawWheel();
+      function spin(timestamp) {
+        const elapsed = timestamp - startTime;
+        if (elapsed >= duration) {
+          currentAngle = targetAngle % (2 * Math.PI);
           spinning = false;
+          drawWheel();
           showResultPopup(reward);
+          return;
         }
-      }
 
-      requestAnimationFrame(animate);
+        // ease-out функция для плавности замедления
+        const t = elapsed / duration;
+        const easeOut = 1 - Math.pow(1 - t, 3);
+
+        currentAngle = easeOut * targetAngle;
+        drawWheel();
+        requestAnimationFrame(spin);
+      }
+      requestAnimationFrame(spin);
     }
 
     function showResultPopup(reward) {
       pointer.style.animation = "bounce 0.5s ease";
       setTimeout(() => (pointer.style.animation = "none"), 500);
 
-      const popup = document.getElementById("rewardPopup");
-      popup.textContent = reward.text;
-      popup.style.opacity = "1";
+      rewardPopup.textContent = reward.text;
+      rewardPopup.style.opacity = "1";
 
       setTimeout(() => {
         Telegram.WebApp.sendData(JSON.stringify(reward));
       }, 500);
 
       setTimeout(() => {
-        popup.style.opacity = "0";
+        rewardPopup.style.opacity = "0";
       }, 2000);
 
       setTimeout(() => {
@@ -265,8 +278,13 @@
     }
 
     window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
-    drawWheel();
+
+    window.onload = () => {
+      resizeCanvas();
+      drawWheel();
+      animateSpinToIndex(selectedIndex, selectedReward);
+    };
+
   </script>
 </body>
 </html>
