--- a/wheel.html
+++ b/wheel.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="theme-color" content="#222" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>Колесо фортуны</title>
+  <meta name="theme-color" content="#222" />
   <style>
     body {
       display: flex;
@@ -25,35 +22,8 @@
     #wheel-container {
       width: 80vw;
       max-width: 500px;
-      max-height: 80vh;
       aspect-ratio: 1 / 1;
       position: relative;
-      margin-bottom: 20px;
-    }
-    #pointer {
-      width: 0;
-      height: 0;
-      position: absolute;
-      bottom: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 40px solid #000;
-      animation: none;
-      /* Стрелка направлена вверх, стоит снизу */
-    }
-    #pointer::after {
-      content: '';
-      position: absolute;
-      left: -25px;
-      top: 0;
-      width: 0;
-      height: 0;
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 40px solid #000;
-      filter: drop-shadow(0 0 4px white);
     }
     canvas {
       width: 100%;
@@ -62,6 +32,29 @@
       border-radius: 50%;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
       background: #fff;
+    }
+    #pointer {
+      position: absolute;
+      top: -30px;
+      left: 50%;
+      transform: translateX(-50%) rotate(180deg);
+      width: 0;
+      height: 0;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      border-top: 40px solid #000;
+    }
+    #pointer::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -25px;
+      width: 0;
+      height: 0;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      border-top: 40px solid #000;
+      filter: drop-shadow(0 0 4px white);
     }
     #rewardPopup {
       position: absolute;
@@ -89,41 +82,30 @@
     <canvas id="wheel"></canvas>
   </div>
   <div id="rewardPopup"></div>
+
   <script>
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
 
-    // Получаем параметры из URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const forcedIndex = parseInt(urlParams.get("index"));
-    
-    if (!isNaN(forcedIndex)) {
-      forcedResultIndex = forcedIndex;
-      spinning = true;
-      animationStartTime = null;
-      animate(performance.now());
-    }
-
-    const canvas = document.getElementById('wheel');
-    const ctx = canvas.getContext('2d');
-    const pointer = document.getElementById('pointer');
-    const wheelContainer = document.getElementById('wheel-container');
+    const canvas = document.getElementById("wheel");
+    const ctx = canvas.getContext("2d");
+    const popup = document.getElementById("rewardPopup");
 
     const rewards = [
-      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#C62828' }, 
+      { type: 'exp_loss', value: 12, text: '-12 опыта', color: '#C62828' },
       { type: 'exp_gain', value: 12, text: '+12 опыта', color: '#388E3C' },
-      { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' }, 
-      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' }, 
-      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' }, 
+      { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' },
+      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },
+      { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
       { type: 'premium', value: 7, text: 'Премиум аккаунт (7 дней)', color: '#6A1B9A' },
       { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
       { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' },
-      { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },  
-      { type: 'exp_gain', value: 6, text: '+6 опыта', color: '#81C784' },  
-      { type: 'none', value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },  
-      { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#F44336' },  
-      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },   
-      { type: 'exp_loss', value: 18, text: '-18 опыта', color: '#AD1457' },    
+      { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },
+      { type: 'exp_gain', value: 6, text: '+6 опыта', color: '#81C784' },
+      { type: 'none', value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },
+      { type: 'exp_loss', value: 15, text: '-15 опыта', color: '#F44336' },
+      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },
+      { type: 'exp_loss', value: 18, text: '-18 опыта', color: '#AD1457' },
       { type: 'exp_gain', value: 30, text: '+30 опыта', color: '#2E7D32' },
       { type: 'exp_loss', value: 21, text: '-21 опыта', color: '#E53935' },
       { type: 'exp_gain', value: 24, text: '+24 опыта', color: '#43A047' },
@@ -131,16 +113,14 @@
 
     const anglePerSegment = (2 * Math.PI) / rewards.length;
     let currentAngle = 0;
+    let targetAngle = 0;
     let spinning = false;
-    let spinVelocity = 0;
 
-    // Входной параметр — индекс результата, полученного от сервера
-    // Например, сюда прилетает index, который должен быть выигрышем
-    // Пример: const forcedResultIndex = 7;
-
-    // Для демонстрации, поставим forcedResultIndex в глобальную переменную,
-    // в реальном коде надо получать через Telegram.WebApp.initDataUnsafe или сообщение от бота.
-    let forcedResultIndex = null;
+    const urlParams = new URLSearchParams(window.location.search);
+    const index = parseInt(urlParams.get("index"));
+    const type = urlParams.get("type");
+    const value = urlParams.get("value");
+    const text = urlParams.get("text");
 
     function drawWheel() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -149,155 +129,96 @@
       const baseRadius = canvas.width / 2 - 20;
       const extendedRadius = baseRadius + 20;
 
-      rewards.forEach((reward, index) => {
-        const startAngle = currentAngle + anglePerSegment * index;
-        const endAngle = startAngle + anglePerSegment;
+      rewards.forEach((reward, i) => {
+        const start = currentAngle + anglePerSegment * i;
+        const end = start + anglePerSegment;
 
         ctx.beginPath();
         ctx.moveTo(centerX, centerY);
-        ctx.arc(centerX, centerY, extendedRadius, startAngle, endAngle);
+        ctx.arc(centerX, centerY, extendedRadius, start, end);
         ctx.fillStyle = reward.color;
         ctx.fill();
+        ctx.strokeStyle = "#fff";
         ctx.lineWidth = 2;
-        ctx.strokeStyle = '#fff';
         ctx.stroke();
 
-        const midAngle = startAngle + anglePerSegment / 2;
-        const isEmoji = /^[^\w\s]+$/.test(reward.text);
-        const fontSize = isEmoji
-          ? Math.max(10, canvas.width / 18)
-          : Math.max(10, canvas.width / 40);
-
-        ctx.font = `bold ${fontSize}px "Segoe UI Emoji", Arial`;
-        ctx.fillStyle = '#fff';
-        ctx.textAlign = 'center';
-        ctx.textBaseline = 'middle';
-
+        const midAngle = start + anglePerSegment / 2;
         ctx.save();
+        ctx.translate(centerX, centerY);
+        ctx.rotate(midAngle);
+        ctx.textAlign = "center";
+        ctx.textBaseline = "middle";
+        ctx.fillStyle = "#fff";
+        ctx.font = `bold ${canvas.width / 30}px "Segoe UI Emoji", Arial`;
+
+        const label = reward.text;
+        const isEmoji = /^[^\w\s]+$/.test(label);
+
         if (isEmoji) {
-          const x = centerX + baseRadius * 0.7 * Math.cos(midAngle);
-          const y = centerY + baseRadius * 0.7 * Math.sin(midAngle);
-          ctx.fillText(reward.text, x, y);
+          ctx.setTransform(1, 0, 0, 1, centerX + baseRadius * 0.7 * Math.cos(midAngle), centerY + baseRadius * 0.7 * Math.sin(midAngle));
+          ctx.fillText(label, 0, 0);
         } else {
-          ctx.translate(centerX, centerY);
-          ctx.rotate(midAngle);
-          ctx.fillText(reward.text, baseRadius * 0.7, 0);
+          ctx.fillText(label, baseRadius * 0.7, 0);
         }
+
         ctx.restore();
       });
     }
 
-    // Стрелка смотрит вверх, значит pointerAngle = -π/2
-    const pointerAngle = -Math.PI / 2;
+    function animateSpin(timestamp) {
+      if (!spinning) return;
 
-    // Спин с учётом принудительного результата
-    let animationStartTime = null;
-    const spinDuration = 5000; // длительность анимации спина в мс
+      const delta = (targetAngle - currentAngle + Math.PI * 10) % (Math.PI * 2);
+      const step = 0.05;
 
-    function animate(timestamp) {
-      if (!animationStartTime) animationStartTime = timestamp;
-
-      const elapsed = timestamp - animationStartTime;
-
-      if (forcedResultIndex === null) {
-        // Если результат не задан, просто крутим с затуханием
-        if (spinning) {
-          currentAngle += spinVelocity;
-          spinVelocity *= 0.985;
-          if (spinVelocity < 0.002) {
-            spinning = false;
-            showResult();
-          }
-        }
-      } else {
-        // Анимация с заранее известным результатом — плавно дотянуть колесо до нужного угла
-
-        // Целевой угол для остановки:
-        // вращаем на несколько полных оборотов + позиция нужного сектора с поправкой на стрелку
-        const totalSpins = 6; // количество полных оборотов перед остановкой
-        const targetAngle = 
-          totalSpins * 2 * Math.PI + // полные обороты
-          (rewards.length - forcedResultIndex) * anglePerSegment - // сектор, учитывая направление вращения
-          pointerAngle + // поправка на направление стрелки (стрелка смотрит вверх)
-          anglePerSegment / 2; // центр сектора
-
-        // easeOut функция для плавного замедления
-        function easeOut(t) {
-          return 1 - Math.pow(1 - t, 3);
-        }
-
-        const progress = Math.min(elapsed / spinDuration, 1);
-        currentAngle = targetAngle * easeOut(progress);
-
-        if (progress === 1) {
-          spinning = false;
-          showResult();
-          forcedResultIndex = null; // сброс результата для следующего спина
-        }
+      if (Math.abs(delta) < 0.01) {
+        currentAngle = targetAngle;
+        spinning = false;
+        drawWheel();
+        showReward();
+        return;
       }
 
+      currentAngle += step;
       drawWheel();
-
-      if (spinning || forcedResultIndex !== null) {
-        requestAnimationFrame(animate);
-      }
+      requestAnimationFrame(animateSpin);
     }
 
-    function showResult() {
-      const popup = document.getElementById('rewardPopup');
-      const reward = rewards[forcedResultIndex ?? Math.floor(
-        ((2 * Math.PI - (currentAngle % (2 * Math.PI)) + Math.PI / 2) % (2 * Math.PI)) / anglePerSegment
-      )];
-      
-      pointer.style.animation = 'bounce 0.5s ease';
-      setTimeout(() => pointer.style.animation = 'none', 500);
-
-      popup.textContent = reward.text;
-      popup.style.opacity = '1';
+    function showReward() {
+      popup.textContent = decodeURIComponent(text || "?");
+      popup.style.opacity = "1";
 
       setTimeout(() => {
-        Telegram.WebApp.sendData(JSON.stringify({ type: reward.type, value: reward.value, index: forcedResultIndex }));
+        Telegram.WebApp.sendData(JSON.stringify({
+          type: type,
+          value: value
+        }));
       }, 500);
 
-      setTimeout(() => {
-        popup.style.opacity = '0';
-      }, 2000);
-
-      setTimeout(() => {
-        Telegram.WebApp.close();
-      }, 2500);
+      setTimeout(() => popup.style.opacity = "0", 2000);
+      setTimeout(() => Telegram.WebApp.close(), 2500);
     }
 
-    // Входные данные из бота
-    window.Telegram.WebApp.onEvent('mainButtonClicked', () => {
-      // Игнорируем — у нас нет кнопки спина
-    });
+    function spinToIndex(index) {
+      const randomTurns = 5 + Math.random() * 2;
+      targetAngle = (Math.PI * 2) * randomTurns - (index * anglePerSegment) - anglePerSegment / 2;
+      spinning = true;
+      animateSpin();
+    }
 
-    // Ждём команду от бота с результатом
-    window.Telegram.WebApp.onEvent('data', (data) => {
-      try {
-        const parsed = JSON.parse(data);
-        if (typeof parsed.index === 'number' && parsed.index >= 0 && parsed.index < rewards.length) {
-          forcedResultIndex = parsed.index;
-          spinning = true;
-          animationStartTime = null;
-          animate(performance.now());
-        }
-      } catch(e) {
-        console.error('Ошибка разбора данных от бота:', e);
-      }
-    });
-
-    // Инициализация
     function resizeCanvas() {
-      canvas.width = wheelContainer.offsetWidth;
-      canvas.height = wheelContainer.offsetHeight;
+      canvas.width = canvas.offsetWidth;
+      canvas.height = canvas.offsetHeight;
       drawWheel();
     }
 
-    window.addEventListener('resize', resizeCanvas);
+    window.addEventListener("resize", resizeCanvas);
     resizeCanvas();
-    drawWheel();
+
+    // Автоматически запускаем вращение, если index указан
+    if (!isNaN(index)) {
+      spinToIndex(index);
+    }
   </script>
 </body>
 </html>
