--- a/wheel.html
+++ b/wheel.html
@@ -35,15 +35,16 @@
     }
     #pointer {
       position: absolute;
-      top: -30px;
+      bottom: -30px; /* было top: -30px */
       left: 50%;
-      transform: translateX(-50%) rotate(180deg);
+      transform: translateX(-50%);
       width: 0;
       height: 0;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
-      border-top: 40px solid #000;
+      border-top: 40px solid #000; /* остриё направлено вверх */
     }
+    
     #pointer::after {
       content: '';
       position: absolute;
