--- a/wheel.html
+++ b/wheel.html
@@ -34,27 +34,27 @@
       background: #fff;
     }
     #pointer {
-      position: absolute;
-      bottom: -30px; /* было top: -30px */
-      left: 50%;
-      transform: translateX(-50%);
       width: 0;
       height: 0;
+      position: absolute;
+      bottom: -30px;
+      left: 50%;
+      transform: translateX(-50%);
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
-      border-top: 40px solid #000; /* остриё направлено вверх */
+      border-bottom: 40px solid #000;
+      animation: none;
     }
-    
     #pointer::after {
       content: '';
       position: absolute;
-      top: 0;
       left: -25px;
+      top: 0;
       width: 0;
       height: 0;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
-      border-top: 40px solid #000;
+      border-bottom: 40px solid #000;
       filter: drop-shadow(0 0 4px white);
     }
     #rewardPopup {
