--- a/wheel.html
+++ b/wheel.html
@@ -38,12 +38,12 @@
       width: 0;
       height: 0;
       position: absolute;
-      top: -40px;
+      bottom: -30px;
       left: 50%;
       transform: translateX(-50%);
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
-      border-top: 40px solid #000;
+      border-bottom: 40px solid #000;
       z-index: 10;
     }
 
@@ -56,7 +56,7 @@
       height: 0;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
-      border-top: 40px solid #000;
+      border-bottom: 40px solid #000;
       filter: drop-shadow(0 0 4px white);
     }
 
