--- a/wheel.html
+++ b/wheel.html
@@ -96,7 +96,7 @@
       { type: 'exp_loss', value: 6, text: '-6 опыта', color: '#E57373' },
       { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },
       { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
-      { type: 'premium', value: 7, text: 'Премиум аккаунт (7 дней)', color: '#6A1B9A' },
+      { type: 'premium', value: 3, text: 'Премиум аккаунт (3 дня)', color: '#6A1B9A' },
       { type: 'exp_loss', value: 3, text: '-3 опыта', color: '#EF9A9A' },
       { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' },
       { type: 'exp_loss', value: 24, text: '-24 опыта', color: '#B71C1C' },
