--- a/wheel.html
+++ b/wheel.html
@@ -211,7 +211,7 @@
       const centerSegment = segmentAngle + anglePerSegment / 2; // Центр сегмента
       const pointerAdjustment = Math.PI; // Стрелка внизу (180°)
       totalRotation = (2 * Math.PI * extraTurns) + pointerAdjustment - centerSegment - currentAngle;
-      console.log(`totalRotation: ${totalRotation});
+      console.log(`totalRotation: ${totalRotation}`);
     
       animationStartTime = null;
       resultIndex = index;
