--- a/wheel.html
+++ b/wheel.html
@@ -243,10 +243,10 @@
 
       const extraTurns = 7;
       const segmentAngle = anglePerSegment * index;
-      const centerSegment = segmentAngle + anglePerSegment / 2;
-      const pointerAdjustment = -Math.PI / 2;
-
-      totalRotation = (2 * Math.PI * extraTurns) + pointerAdjustment - centerSegment;
+      const centerOfSegment = anglePerSegment * index + anglePerSegment / 2;
+      const pointerDirection = 3 * Math.PI / 2; // Стрелка смотрит вниз (270°)
+      
+      totalRotation = 2 * Math.PI * extraTurns + pointerDirection - centerOfSegment;
 
       popup.style.opacity = "0";
       requestAnimationFrame(animateSpin);
