--- a/wheel.html
+++ b/wheel.html
@@ -241,7 +241,7 @@
       animationStartTime = null;
       resultIndex = index;
     
-      const extraTurns = 7;
+      const extraTurns = 5 + Math.floor(Math.random() * 3);
       const segmentAngle = anglePerSegment * index;
       const centerOfSegment = segmentAngle; // Центр сектора относительно начального угла
       const pointerDirection = 3 * Math.PI / 2; // Стрелка смотрит вниз (270°)
