--- a/wheel.html
+++ b/wheel.html
@@ -121,23 +121,23 @@
     const popup = document.getElementById("rewardPopup");
 
     const rewards = [
-      { type: 'exp_loss', value: 12, text: 'Опыт -12', color: '#C62828' },
-      { type: 'exp_gain', value: 12, text: 'Опыт +12', color: '#388E3C' },
-      { type: 'exp_loss', value: 6, text: 'Опыт -6', color: '#E57373' },
-      { type: 'item', value: 'legendary', text: '🎁', color: '#FFD700' },
-      { type: 'exp_loss', value: 3, text: 'Опыт -3', color: '#EF9A9A' },
-      { type: 'premium', value: 3, text: 'Премиум аккаунт (3 дня)', color: '#6A1B9A' },
-      { type: 'exp_loss', value: 3, text: 'Опыт -3', color: '#EF9A9A' },
-      { type: 'raid', value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' },
-      { type: 'exp_loss', value: 24, text: 'Опыт -24', color: '#B71C1C' },
-      { type: 'exp_gain', value: 6, text: 'Опыт +6', color: '#81C784' },
-      { type: 'none', value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },
-      { type: 'exp_loss', value: 15, text: 'Опыт -15', color: '#F44336' },
-      { type: 'item', value: 'epic', text: '🎁', color: '#8E24AA' },
-      { type: 'exp_loss', value: 18, text: 'Опыт -18', color: '#AD1457' },
-      { type: 'exp_gain', value: 30, text: 'Опыт +30', color: '#2E7D32' },
-      { type: 'exp_loss', value: 21, text: 'Опыт -21', color: '#E53935' },
-      { type: 'exp_gain', value: 24, text: 'Опыт +24', color: '#43A047' },
+      { type: 'exp_loss', value: 12, text: 'Опыт -12', color: '#C62828' },      
+      { type: 'exp_gain', value: 12, text: 'Опыт +12', color: '#2E7D32' },       
+      { type: 'exp_loss', value: 6,  text: 'Опыт -6',  color: '#AD1457' },      
+      { type: 'item',     value: 'legendary', text: '🎁', color: '#FFD700' },
+      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#6A1B9A' },
+      { type: 'premium',  value: 3,  text: 'Премиум аккаунт (3 дня)', color: '#43A047' },
+      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#E53935' },       
+      { type: 'raid',     value: 'clear', text: 'Сброс таймера /raid', color: '#1565C0' }, 
+      { type: 'exp_loss', value: 24, text: 'Опыт -24', color: '#388E3C' },     
+      { type: 'exp_gain', value: 6,  text: 'Опыт +6',  color: '#8E24AA' },
+      { type: 'none',     value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' }, 
+      { type: 'exp_loss', value: 15, text: 'Опыт -15', color: '#81C784' },         
+      { type: 'item',     value: 'epic', text: '🎁', color: '#8E24AA' },           
+      { type: 'exp_loss', value: 18, text: 'Опыт -18', color: '#EF9A9A' },      
+      { type: 'exp_gain', value: 30, text: 'Опыт +30', color: '#F44336' },       
+      { type: 'exp_loss', value: 21, text: 'Опыт -21', color: '#E57373' },      
+      { type: 'exp_gain', value: 24, text: 'Опыт +24', color: '#B71C1C' },       
     ];
 
     const segmentCount = rewards.length;
