--- a/wheel.html
+++ b/wheel.html
@@ -6,26 +6,25 @@
   <title>Колесо фортуны</title>
   <meta name="theme-color" content="#222" />
   <style>
-    html, body {
-      margin: 0 !important;
-      padding: 0 !important;
-      height: 100vh;
-      height: 100dvh;
-      width: 100vw;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #222, #333);
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      touch-action: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      box-sizing: border-box;
-    }
+  html, body {
+    margin: 0 !important;
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left) !important;
+    height: 100vh;
+    height: 100dvh;
+    width: 100vw;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, #222, #333);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-sizing: border-box;
+  }
 
     #wheel-container {
       position: relative;
@@ -110,6 +109,13 @@
         border-width: 3px;
       }
     }
+
+    @supports (-webkit-overflow-scrolling: touch) {
+      body {
+        padding-top: env(safe-area-inset-top);
+        padding-bottom: env(safe-area-inset-bottom);
+      }
+    }
   </style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
@@ -121,7 +127,10 @@
   <div id="rewardPopup"></div>
 
   <script>
-    Telegram?.WebApp?.expand?.(); // Попытка открыть WebApp на весь экран
+    if (window.Telegram?.WebApp) {
+      Telegram.WebApp.ready();
+      Telegram.WebApp.expand();
+    }
 
     const canvas = document.getElementById("wheel");
     const ctx = canvas.getContext("2d");
