--- a/wheel.html
+++ b/wheel.html
@@ -251,7 +251,7 @@
       const extraTurns = 5 + Math.floor(Math.random() * 3);
       const minAngle = (index * anglePerSegment) + 0.06;
       const maxAngle = minAngle + anglePerSegment - 0.02;
-      const targetAngleInSector = Math.random() * (maxAngle - minAngle) + minAngle;
+      //const targetAngleInSector = Math.random() * (maxAngle - minAngle) + minAngle;
       const targetAngleInSector = minAngle;
       const pointerAdjustment = Math.PI / 2;
       totalRotation = (2 * Math.PI * extraTurns) + pointerAdjustment - targetAngleInSector;
